--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Program GIT di Camp404</h1>
-    <p>Tingkatkan skill versioningmu di sini!</p>
+    <p>Klik daftar untuk meningkatkan skillmu!</p>
+    <button>Daftar</button>
 </body>
 </html>
